# iot-middleware-freertos-samples

./: .gitmodules
demos/projects/ESPRESSIF/esp32/components/sample-azure-iot/: transport_tls_esp32.c
demos/projects/ESPRESSIF/esp32/main/: CMakeLists.txt  atecc608.c  azure_iot_freertos_esp32_main.c
demos/projects/ESPRESSIF/esp32/main/includes/: atecc608.h
